fix some labels

--- a/redis_exporter.conf
+++ b/redis_exporter.conf
@@ -5,5 +5,5 @@
     "listen_address": "0.0.0.0:9121",
     "sub_system_name": "AOMP-JOB",
     "sub_system_id": "5075",
-    "cluster_name": "aomp-redis",
+    "cluster_name": "test",
 }
